positional_derive/tests/ui/list-attributes.stderr
error: failed to parse field attribute

         = note: unsupported attribute

 --> tests/ui/list-attributes.rs:5:13
  |
5 |     #[field(a)]
  |             ^
