positional_derive/tests/ui/list-attributes.rs
use positional_derive::ToPositionalRow;

#[derive(ToPositionalRow)]
struct MyData {
    #[field(a)]
    name: String,
}

fn main() {}
